--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Fibonacci HW </title>
 </head>
 <body>
     <script type="text/javascript" src="js/index.js"></script>
